# f1-strategy-engine

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CLAUDE_CHEATSHEET.md  Makefile  README.md  alembic.ini  pyproject.toml
.claude/: settings.json
.claude/commands/: add-endpoint.md  add-ml-model.md  debug-test.md  migrate.md  pre-commit.md  run-day.md
.github/workflows/: ci.yml
backend/: main.py
backend/apis/v1/: __init__.py  alerts.py  auth.py  drivers.py  races.py  strategy.py  telemetry.py
backend/core/: config.py  database.py  exceptions.py  metrics.py  middleware.py  rate_limit.py  redis_client.py  security.py
backend/migrations/: README  env.py
backend/migrations/versions/: 20260630_enable_timescale_convert_lapdata.py  20260630_initial_schema.py  20260702_add_lap_data_tire_stint_unique_constraints.py  20260702_widen_compound_columns.py  20260708_add_position_track_status_to_lap_data.py  20260711_add_fcm_token_to_users.py  20260711_add_weather_columns_to_lap_data.py  20260712_add_read_at_to_alerts.py  20260716_add_strategy_predictions_and_alerts_.py
backend/models/: __init__.py  driver.py  race.py  strategy.py  telemetry.py  user.py
backend/schemas/: __init__.py  alert_schema.py  common.py  driver_schema.py  race_schema.py  simulate_schema.py  strategy_schema.py  telemetry_schema.py  user_schema.py
backend/scripts/: _ingest_common.py  backfill_position_track_status.py  backfill_tire_data.py  backfill_weather_data.py  ingest_historical.py  ingest_live_session.py  seed_circuits.py  seed_teams.py  train_models.py  warm_strategy_cache.py
backend/services/: alert_service.py  cache_service.py  driver_service.py  race_service.py  strategy_service.py  telemetry_service.py  user_service.py
backend/services/ml/: driver_style.py  explainability.py  pit_predictor.py  race_simulator.py  safety_car_model.py  tire_deg_model.py
backend/tests/: conftest.py
backend/tests/e2e/: conftest.py  test_api_flows.py  test_live_race_flow.py
backend/tests/integration/: conftest.py  test_alembic_migrations.py  test_alerts.py  test_auth.py  test_live_prediction_pipeline.py  test_race_api.py  test_race_simulation_serialization.py  test_strategy_endpoint.py  test_telemetry_ingestion.py  test_websocket.py
backend/tests/load/: locustfile.py  replay_publisher.py  ws_load_test.py
backend/tests/unit/: test_alert_service.py  test_cache_service.py  test_driver_service.py  test_driver_style.py  test_pit_predictor.py  test_race_service.py  test_race_simulator.py  test_safety_car_model.py  test_schemas.py  test_security.py  test_strategy_service.py  test_telemetry_service.py  test_tire_deg_model.py
backend/workers/: alert_worker.py  celery_app.py  prediction_worker.py  telemetry_worker.py
docs/: load_test_results.md
infra/docker/: Dockerfile.backend  Dockerfile.worker  docker-compose.yml
infra/monitoring/: alertmanager.yml  alerts.yml  grafana-dashboard.json  prometheus.yml
infra/monitoring/grafana/provisioning/dashboards/: dashboard.yml
infra/monitoring/grafana/provisioning/datasources/: datasource.yml
