[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "f1-strategy-engine"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "alembic>=1.13.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "asyncpg>=0.29.0",
    "celery[redis]>=5.4.0",
    "redis>=5.0.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.3.0",
    "scikit-learn>=1.4.0",
    "numpy>=1.26.0",
    "scipy>=1.13.0",
    "numba>=0.59.0",
    "fastf1>=3.3.0",
    "httpx>=0.27.0",
    "websockets>=12.0",
    "apscheduler>=3.10.4",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "sentry-sdk[fastapi]>=2.0.0",
    "shap>=0.45.0",
    "umap-learn>=0.5.6",
    "joblib>=1.4.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "testcontainers[postgres,redis]>=4.7.0",
    "playwright>=1.44.0",
    "locust>=2.29.0",
    "fakeredis>=2.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "types-redis>=4.6.0",
    "types-passlib>=1.7.4",
    "pre-commit>=3.7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "unit: marks tests as unit tests (no DB, no network)",
    "integration: marks tests as integration tests (real DB + Redis)",
    "e2e: marks tests as end-to-end tests (full stack, Playwright)",
    "load: marks tests as load tests (Locust)",
]
testpaths = ["backend/tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "S", "B", "A", "C4", "PT"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
